deploied && implemented (:default server settings)

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "database.js",
   "scripts": {
     "start": "nodemon ./src/index.js",
+    "prod:start": "node ./src/index.js",
     "build": "npm install"
   },
   "keywords": [],
