--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "debug": "^4.3.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "firebase": "^10.13.0",
+    "firebase-admin": "^12.3.1",
     "http-errors": "^2.0.0",
     "i": "^0.3.7",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "npm": "^10.8.2",
     "pg": "^8.12.0"
   },
