--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "npm": "^10.8.2",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "stripe": "^17.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
