--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "multer": "^1.4.5-lts.1",
     "npm": "^10.8.2",
     "pg": "^8.12.0",
+    "socket.io": "^4.8.0",
     "stripe": "^17.1.0"
   },
   "devDependencies": {
